fix broken icon bullet alignment

--- a/wp-content/themes/ushipnetwork/css/style.css
+++ b/wp-content/themes/ushipnetwork/css/style.css
@@ -2408,25 +2408,25 @@ article .post-featureImage {
 
 .iconBulletPoints-row {
   display: flex;
-  align-items: flex-start;
   width: 100%; }
 
 .iconBulletPoints-row:not(:last-child) {
-  margin-bottom: 30px; }
+  padding-bottom: 30px; }
   @media only screen and (max-width: 769px) {
     .iconBulletPoints-row:not(:last-child) {
-      margin-bottom: 40px; } }
+      padding-bottom: 40px; } }
 
 .iconBulletPoints-icon {
-  margin-left: 90px;
-  margin-right: 44px;
-  margin-top: 8px; }
+  padding-left: 90px;
+  padding-right: 44px;
+  padding-top: 8px; }
   @media only screen and (max-width: 769px) {
     .iconBulletPoints-icon {
-      margin-left: 0;
-      margin-right: 15px; } }
+      padding-left: 0;
+      padding-right: 15px; } }
 
 .iconBulletPoints-icon svg {
+  display: block;
   width: 65px;
   height: 50px; }
   @media only screen and (max-width: 769px) {
@@ -2436,13 +2436,13 @@ article .post-featureImage {
 
 .iconBulletPoints-title {
   font-family: "LatoBold";
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin-left: 199px; }
+  padding-left: 199px; }
   @media only screen and (max-width: 769px) {
     .iconBulletPoints-title {
-      margin-left: 70px; } }
+      padding-left: 70px; } }
 
 .iconBulletPoints-body p {
   line-height: 30px; }
