--- a/wp-content/themes/ushipnetwork/sass/_partials/modules/_iconbulletpoints.scss
+++ b/wp-content/themes/ushipnetwork/sass/_partials/modules/_iconbulletpoints.scss
@@ -15,30 +15,30 @@
 
 .iconBulletPoints-row {
   display: flex;
-  align-items: flex-start;
   width: 100%;
 }
 
 .iconBulletPoints-row:not(:last-child) {
-  margin-bottom: 30px;
+  padding-bottom: 30px;
 
   @media #{$default-break} {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
 }
 
 .iconBulletPoints-icon {
-  margin-left: 90px;
-  margin-right: 44px;
-  margin-top: 8px;
+  padding-left: 90px;
+  padding-right: 44px;
+  padding-top: 8px;
 
   @media #{$default-break} {
-    margin-left: 0;
-    margin-right: 15px;
+    padding-left: 0;
+    padding-right: 15px;
   }
 }
 
 .iconBulletPoints-icon svg {
+  display: block;
   width: 65px;
   height: 50px;
 
@@ -50,13 +50,13 @@
 
 .iconBulletPoints-title {
   font-family: $lato-bold;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin-left: 199px;
+  padding-left: 199px;
 
   @media #{$default-break} {
-    margin-left: 70px;
+    padding-left: 70px;
   }
 }
 
